🐛 Fixed window scroll jump bug

--- a/src/components/window/window.scss
+++ b/src/components/window/window.scss
@@ -99,6 +99,6 @@ window-component{
     .container{
         width: 100%;
         display: block;
-        overflow-y: auto;
+        overflow-y: scroll;
     }
 }
